[package]
name = "n0-watcher"
version = "0.6.0"
edition = "2021"
readme = "README.md"
description = "async watchable values"
license = "MIT OR Apache-2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>", "n0 team"]
repository = "https://github.com/n0-computer/n0-watcher"
keywords = ["async", "watcher"]

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.85"

[dependencies]
derive_more = { version = "2.0.1", features = ["debug"] }
n0-error = "0.1.3"
n0-future = "0.3.1"

# non-wasm-in-browser dependencies
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]

# wasm-in-browser dependencies
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]

[dev-dependencies]
rand = "0.9"
tokio = { version = "1", features = ["macros", "sync", "rt-multi-thread", "time", "test-util"] }
tokio-util = { version = "0.7", features = ["io-util", "io", "rt"] }

[lints.rust]
missing_debug_implementations = "warn"
# We have our own `watcher_loom` cfg to enable tokio-rs/loom testing.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(watcher_docsrs)", "cfg(watcher_loom)"] }

[lints.clippy]
unused-async = "warn"

[profile.release]
debug = true

[profile.dev-ci]
inherits = 'dev'
opt-level = 1
